--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(OS_Program3)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(OS_Program3 main.cpp)
+add_executable(OS_Program3 main.cpp sched_sim.h sched_sim.cpp)
